trunk/Archive2/fc/205378bcc6f7d5/output
main.cpp: In function 'int main()':
main.cpp:81:9: error: 'cout' was not declared in this scope
         cout << "q_round1(" << setw(4) << i << ") = " << setw(4) << q1 << " ";
         ^
main.cpp:81:9: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:81:38: error: 'setw' was not declared in this scope
         cout << "q_round1(" << setw(4) << i << ") = " << setw(4) << q1 << " ";
                                      ^
main.cpp:87:75: error: 'endl' was not declared in this scope
         cout << "q_round3(" << setw(4) << i << ") = " << setw(4) << q3 << endl;
                                                                           ^
main.cpp:87:75: note: suggested alternative:
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from main.cpp:1:
/usr/include/c++/4.8/ostream:564:5: note:   'std::endl'
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
main.cpp:95:1: error: expected '}' at end of input
 }
 ^
